--- a/index.html
+++ b/index.html
@@ -18,5 +18,14 @@
 
 <p></p>
 
+
+<label for="theme">Select theme: </label>
+<select id="theme">
+  <option value="white">White</option>
+  <option value="black">Black</option>
+</select>
+
+<h1>This is my website</h1>
+
 </body>
 </html>
