--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <label for="theme">Select theme: </label>
-<select id="theme">
+<select1 id="theme">
   <option value="white">White</option>
   <option value="black">Black</option>
 </select>
