--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 </select>
 
 <h1>This is my website</h1>
-<button href="test.html" ></button>
+<button href="test.html" >Test</button>
 </body>
 </html>
